[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/crab.gd" type="Script" id=1]
[ext_resource path="res://assets/art/enemy/enemy.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "crabDead",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "crabMove",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 11.5, 6.58202 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10.5, 2 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 14, 6.75 )

[node name="crab" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 111, -23 )
scale = Vector2( 1.0625, 1.0625 )
frames = SubResource( 9 )
animation = "crabMove"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 110.5, -21.418 )
shape = SubResource( 10 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 110, -22 )
enabled = true
cast_to = Vector2( 0, 19 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 110.5, -32 )
shape = SubResource( 11 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 110, -22.25 )
shape = SubResource( 12 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
